Allow Decimals in URLs
- Changed the regular expression in getExtension
  to look for characters a-z
- Added test for decimal urls
- Added test for non html urls

--- a/test/src/fixtures/rendering.html
+++ b/test/src/fixtures/rendering.html
@@ -10,5 +10,13 @@
       <h1>Rendering</h1>
       <p><a id="same-origin-link" href="/fixtures/one.html">Same-origin link</a></p>
     </section>
+    <section>
+      <h1>Rendering</h1>
+      <p><a id="same-origin-link-without-html" href="/fixtures/one">Same-origin link</a></p>
+    </section>
+    <section>
+      <h1>Rendering</h1>
+      <p><a id="same-origin-link-with-decimal" href="/fixtures/decimal.3.14">Same-origin link</a></p>
+    </section>
   </body>
 </html>
