--- a/test/src/fixtures/navigation.html
+++ b/test/src/fixtures/navigation.html
@@ -14,6 +14,8 @@
       <p data-turbolinks="false"><a id="same-origin-unannotated-link-inside-false-container" href="/fixtures/one.html">Same-origin unannotated link inside data-turbolinks=false container</a></p>
       <p data-turbolinks="false"><a id="same-origin-true-link-inside-false-container" href="/fixtures/one.html" data-turbolinks="true">Same-origin data-turbolinks=true link inside data-turbolinks=false container</a></p>
       <p><a id="cross-origin-unannotated-link" href="about:blank">Cross-origin unannotated link</a></p>
+      <p><a id="same-origin-unannotated-link-non-html" href="/fixtures/one">Same-origin unannotated link non html</a></p>
+      <p><a id="same-origin-unannotated-link-with-period" href="/fixtures/one.period.html">Same-origin unannotated link with period</a></p>
     </section>
   </body>
 </html>
